--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: Oswald;
-    background-color: #222;
+    background-color: rgb(39, 45, 61);
     color: rgba(18, 17, 17, 0.962);
     text-align: center;
     font-size: 1.5rem;
