--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,11 +1,12 @@
 .button{
     
-    background: #232332;
-    background: -moz-linear-gradient(left, #232332 0%, #494A59 50%, #BEBCD1 100%);
+    background: #2b5fd0;
+    /* background: -moz-linear-gradient(left, #232332 0%, #494A59 50%, #BEBCD1 100%);
     background: -webkit-linear-gradient(left, #232332 0%, #494A59 50%, #BEBCD1 100%);
-    background: linear-gradient(to right, #232332 0%, #494A59 50%, #BEBCD1 100%);
+    background: linear-gradient(to right, #232332 0%, #494A59 50%, #BEBCD1 100%); */
     border-radius: 8px;
-    border: 3px solid #232332;
+    border: 3px solid hwb(240 79% 15%);
+    color: hwb(240 79% 15%);
     width: 200px;
-    height: 100px;
+    height: 80px;
 }
