--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,6 +14,7 @@
     margin-left: 40%;
     -webkit-box-shadow: 11px 2px 8px 7px rgba(50, 53, 56, 0.76); 
     box-shadow: 11px 2px 8px 7px rgba(40, 43, 71, 0.76);
+    border: 3px solid hwb(240 79% 15%);
 
     
     
