--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -21,3 +21,13 @@ h1, h2 , h3  {
     gap: 10px 20px;
     align-self:flex-end
 }
+
+.search{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+    margin: 4rem;
+    align-self:flex-end
+    
+}
