--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -23,16 +23,23 @@ h1, h2 , h3  {
 }
 
 .search{
-    /* justify-content: center; */
     text-align: center;
     background: #232332;
     border-radius: 8px;
     border: 5px solid #232332;
     gap: 3rem;
     width: 350px;
-    height: 60px;
+    height: 40px;
     align-items: center;
     -webkit-box-shadow: 11px 2px 8px 7px rgba(50, 53, 56, 0.76); 
-        box-shadow: 11px 2px 8px 7px rgba(40, 43, 71, 0.76);    
+        box-shadow: 11px 2px 8px 7px rgba(40, 43, 71, 0.76);  
+    color: antiquewhite;  
 }
 
+.App{
+
+    background : url('../../../public/img/pett.png') no-repeat center center;
+    background-size: cover;
+    background-attachment: scroll;
+
+}
